test/src/e2e_vm_tests/test_programs/should_pass/dca/multiple_enums_same_name/src/colors1.sw
library;

pub enum Colors {
	Red: (),
	Blue: ()
}
