test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/error_attr.sw
library;

#[error_type]
enum OkE {
    #[error(m = "ok")]
    A: (),
}

#[error_type]
enum NotOkE {
    #[error(msg = "not ok")]
    A: (),
}
